Rename and restructure of project to xml2table in preparation for further work (we will diverge significantly from the original fork); fix compile errors on newer JDK's and Windows; switch to Woodstox StAX library which offers faster performance
Details on build and packaging changes:
- Update required Java to 11 (old targets not supported by newer compilers) and make project modular
- Introduce xml2table.sh launcher script
- Add mvn-dep-check.sh helper script to automate checking for available dependency updates
- Upgrade to JUnit 5 and in particular change ConvertorTest to use assertLinesMatch to fix line ending mismatch errors
- Change Convertor to use BufferedInputStream and fix charset name capitalisation issue (originally written as "UtF-8")
- Fix Windows path prefix problems in readFile function when running unit tests